fix: add workout header alignment and color
refactor: remove console.writelines

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -53,6 +53,10 @@ app {
   overflow: hidden;
   text-overflow: ellipsis; }
 
+.navbar-dark .navbar-brand {
+    color: #fff;
+}
+
 .sidebar {
   background-image: linear-gradient(180deg, #052767 0%, #3a0647 70%); }
 
